--- a/Zane.ExceptionCloud.Test/Zane.ExceptionCloud.Test.csproj
+++ b/Zane.ExceptionCloud.Test/Zane.ExceptionCloud.Test.csproj
@@ -1,8 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.AppDomain" Version="2.0.11" />
+    <PackageReference Include="System.Diagnostics.StackTrace" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Zane.ExceptionCloud\Zane.ExceptionCloud.csproj" />
+  </ItemGroup>
 
 </Project>
